--- a/КУРСАЧ/comparis.html
+++ b/КУРСАЧ/comparis.html
@@ -47,21 +47,28 @@
 
             
             <div class="comparison-table-wrapper">
-                <div id="comparison-list">
-                    <table id="comparison-table">
-                        <thead>
-                            <tr>
-                                <th>Image</th>
-                                <th>Name</th>
-                                <th>Category</th>
-                                <th>Price</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Rows will be added here -->
-                        </tbody>
-                    </table>
+               <div id="comparison-list">
+                   <table id="comparison-table">
+                       <thead>
+                           <tr>
+                               <th>Image & Name</th>
+                               <th>Category</th>
+                               <th>Date</th>
+                               <th>Architect</th>
+                               <th>Tech Process</th>
+                               <th>Core</th>
+                               <th>Threads</th>
+                               <th>Clock</th>
+                               <th>IGP</th>
+                               <th>TDP</th>
+                               <th>Price</th>
+                           </tr>
+                       </thead>
+                       <tbody>
+                       </tbody>
+                   </table>
                 </div>
+
             </div>
                
 
